deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-interface-deployment
  labels:
    app: api-interface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-interface
  template:
    metadata:
      labels:
        app: api-interface
    spec:
      containers:
        - name: api-interface
          image: johanbouguermouh/mys3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.2"
            limits:
              memory: "1Gi"
              cpu: "0.5"
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
