service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-interface-service
  labels:
    app: api-interface
spec:
  selector:
    app: api-interface
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
